test/spec_vectors/local_get/fail/module_14.wat
(module (func $large-param (param i32 i64) (local.get 714324343) drop))